--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "~1.2.1",
+    "@angular/cli": "^1.1.1",
     "@angular/compiler-cli": "~4.3.0",
     "@angular/language-service": "~4.3.0",
     "@types/jasmine": "~2.5.53",
