--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/language-service": "~4.3.0",
     "@types/jasmine": "~2.5.53",
     "@types/node": "~8.0.13",
+    "codecov": "^2.2.0",
     "codelyzer": "~3.1.2",
     "jasmine-core": "~2.6.4",
     "jasmine-spec-reporter": "~4.1.1",
