--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,22 @@ sudo: false
 #     packages:
 #       - google-chrome-stable
 
+# cache node modules for faster testing
+cache:
+  yarn: true
+  directories:
+     - ./node_modules
+
+
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3
-  - npm install -g npm@5
+#  - npm install -g npm@5
 #  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost & 
-  - npm install -g greenkeeper-lockfile@1
-  - npm -v
-  - npm install -g @angular/cli
+  - yarn global add greenkeeper-lockfile@1
+#  - npm -v
+  - yarn global add @angular/cli
 
 branches:
   only:
